Fixed issue where back to top button was covering footer icons

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -32,7 +32,7 @@ html {
     display: inline-block;
     text-align: center;
     left: 60%;
-    bottom: 2%;
+    bottom: 7%;
     z-index: 10;
 }
 
@@ -50,7 +50,7 @@ html {
     }
 
     .codeExamp{
-    font-size: 0.5em;
+        font-size: 0.5em;
     }
 }
 
@@ -61,7 +61,7 @@ html {
     }
 
     .codeExamp{
-    font-size: 0.7em;
+        font-size: 0.7em;
     }
 }
 
